How to implement when given activities are not sorted? Some note on the sort function in python

--- a/Greedy Algorithms/1. ActivitySelectionProblem.ipynb
+++ b/Greedy Algorithms/1. ActivitySelectionProblem.ipynb
@@ -32,7 +32,7 @@
    "id": "26cacbe4",
    "metadata": {},
    "source": [
-    "The Greedy Approach:\n",
+    "# The Greedy Approach:\n",
     "1. Sort times by end time\n",
     "2. Select the first activity\n",
     "3. For each remaining activity, if the start time is greater than or equal to the end time of the previously selected activity, select it"
@@ -89,11 +89,106 @@
   },
   {
    "cell_type": "markdown",
+   "source": [
+    "> read the last query in the article\n",
+    "https://chat.openai.com/share/8c5bad81-6026-40a3-9a07-a47ab3bc0dbf"
+   ],
+   "metadata": {
+    "collapsed": false
+   },
+   "id": "7fe7213498e47837"
+  },
+  {
+   "cell_type": "markdown",
    "id": "278bf612",
    "metadata": {},
    "source": [
-    "We will another ways to implement this algorithm"
+    "# How to implement when given activities are not sorted?"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "source": [
+    "```f1 = lambda x : x[1]\n",
+    "Activity = [[5, 9], [1, 2], [3, 4], [0, 6], [5, 7], [8, 9]]\n",
+    "Activity.sort(key=f1)\n",
+    "print(Activity)\n",
+    "```\n",
+    "\n",
+    "1. first it will apply the function f1 on each element of the list\n",
+    "2. then it will sort the list based on the result of the function f1\n",
+    "3. finally it will return the sorted list"
+   ],
+   "metadata": {
+    "collapsed": false
+   },
+   "id": "6500026106b446ef"
+  },
+  {
+   "cell_type": "code",
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Following activities are selected :\n",
+      "[1, 2], [3, 4], [5, 7], [8, 9]"
+     ]
+    }
+   ],
+   "source": [
+    "def MaxActivities(Activity):\n",
+    "    selected = []\n",
+    "    \n",
+    "    # Sort jobs according to their finish time\n",
+    "    Activity.sort(key = lambda x: x[1])\n",
+    "    selected.append(Activity[0])\n",
+    "    j = 0\n",
+    "    for i in range(1, len(Activity)):\n",
+    "        if Activity[i][0] > Activity[j][1]:\n",
+    "            selected.append(Activity[i])\n",
+    "            j = i\n",
+    "    return selected\n",
+    "\n",
+    "\n",
+    "#Driver code \n",
+    "Activity = [[5, 9], [1, 2], [3, 4], [0, 6], [5, 7], [8, 9]]\n",
+    "selected = MaxActivities(Activity)\n",
+    "print(\"Following activities are selected :\")\n",
+    "print(selected[0], end = \"\")\n",
+    "for i in range (1, len(selected)):\n",
+    "    print(\",\", end = \" \")\n",
+    "    print(selected[i], end = '')\n",
+    "    "
+   ],
+   "metadata": {
+    "collapsed": false,
+    "ExecuteTime": {
+     "end_time": "2024-01-20T19:22:13.813340116Z",
+     "start_time": "2024-01-20T19:22:13.809485600Z"
+    }
+   },
+   "id": "320019169453b9b9",
+   "execution_count": 6
+  },
+  {
+   "cell_type": "markdown",
+   "source": [
+    "# Activity Selection Problem using Priority-Queue:"
+   ],
+   "metadata": {
+    "collapsed": false
+   },
+   "id": "41e468084dcd5027"
+  },
+  {
+   "cell_type": "code",
+   "outputs": [],
+   "source": [],
+   "metadata": {
+    "collapsed": false
+   },
+   "id": "bef7fccd8960896d"
   }
  ],
  "metadata": {
