--- a/Greedy Algorithms/1. ActivitySelectionProblem.ipynb
+++ b/Greedy Algorithms/1. ActivitySelectionProblem.ipynb
@@ -187,7 +187,9 @@
   {
    "cell_type": "markdown",
    "source": [
-    "## [Heap](https://www.youtube.com/watch?v=HqPJF2L5h9U&ab_channel=AbdulBari)"
+    "## HEAP \n",
+    "\n",
+    "watch this video to know what is [Heap](https://www.youtube.com/watch?v=HqPJF2L5h9U&ab_channel=AbdulBari)"
    ],
    "metadata": {
     "collapsed": false
@@ -366,7 +368,6 @@
     }
    ],
    "source": [
-    "from heapq import heappush, heappop\n",
     "from heapq import heapify, heappop, heappush\n",
     "\n",
     "# Example usage:\n",
@@ -552,7 +553,8 @@
   {
    "cell_type": "markdown",
    "source": [
-    "# [Leetcode Example](https://leetcode.com/problems/maximum-length-of-pair-chain/)"
+    "# Leetcode\n",
+    " [Leetcode Example](https://leetcode.com/problems/maximum-length-of-pair-chain/)"
    ],
    "metadata": {
     "collapsed": false
